@@ -1,4 +1,9 @@
+TinyMount-0.1.96
+----------------
+  - Add "Settings" dialog.
+
 TinyMount-0.1.95
+----------------
   First 0.2 alpfa
   New features:
     - add config file
